[gd_scene load_steps=5 format=3 uid="uid://cdy8qk3v4xw2h"]

[ext_resource type="Script" path="res://scripts/phases/ship_building.gd" id="1_building"]
[ext_resource type="Script" path="res://scripts/components/hex_grid.gd" id="2_hexgrid"]
[ext_resource type="PackedScene" uid="uid://c6qnmvt5p2rxd" path="res://scenes/ui/launch_sequence.tscn" id="3_launch"]
[ext_resource type="PackedScene" uid="uid://bqxe4r8nwvjsd" path="res://scenes/ui/event_popup.tscn" id="4_popup"]

[node name="ShipBuilding" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_building")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SHIP CONSTRUCTION - Luna Base"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BudgetLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Budget: $2.00B"

[node name="DaysLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Day: 1"

[node name="LaunchWindowLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Launch Window: 180 days"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="SidePanel" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="HintsPanel" type="PanelContainer" parent="HBoxContainer/SidePanel"]
layout_mode = 2

[node name="HintsVBox" type="VBoxContainer" parent="HBoxContainer/SidePanel/HintsPanel"]
layout_mode = 2

[node name="HintsHeader" type="Label" parent="HBoxContainer/SidePanel/HintsPanel/HintsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1.0, 1)
theme_override_font_sizes/font_size = 14
text = "NEXT STEPS"

[node name="PrimaryHint" type="RichTextLabel" parent="HBoxContainer/SidePanel/HintsPanel/HintsVBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
bbcode_enabled = true
text = "[b]1.[/b] Place a [color=yellow]Cockpit[/color] on the grid"
fit_content = true

[node name="SecondaryHints" type="Label" parent="HBoxContainer/SidePanel/HintsPanel/HintsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Then: Add Engine Mount, Life Support..."
autowrap_mode = 2

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/SidePanel"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="Components" type="Panel" parent="HBoxContainer/SidePanel/TabContainer"]
layout_mode = 2

[node name="ComponentList" type="ItemList" parent="HBoxContainer/SidePanel/TabContainer/Components"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Engines" type="Panel" parent="HBoxContainer/SidePanel/TabContainer"]
visible = false
layout_mode = 2

[node name="EngineList" type="ItemList" parent="HBoxContainer/SidePanel/TabContainer/Engines"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crew" type="Panel" parent="HBoxContainer/SidePanel/TabContainer"]
visible = false
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="HBoxContainer/SidePanel/TabContainer/Crew"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CrewList" type="ItemList" parent="HBoxContainer/SidePanel/TabContainer/Crew/VBox"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="HireLabel" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Crew/VBox"]
layout_mode = 2
text = "Hire Crew:"

[node name="CrewOptions" type="OptionButton" parent="HBoxContainer/SidePanel/TabContainer/Crew/VBox"]
layout_mode = 2

[node name="HireButton" type="Button" parent="HBoxContainer/SidePanel/TabContainer/Crew/VBox"]
layout_mode = 2
text = "Hire Selected Crew"

[node name="Cargo" type="Panel" parent="HBoxContainer/SidePanel/TabContainer"]
visible = false
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="HBoxContainer/SidePanel/TabContainer/Cargo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CargoLabel" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2
text = "Essential Cargo:"

[node name="MAVCheck" type="CheckBox" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2
text = "MAV (Mars Ascent Vehicle) - Required"

[node name="RoversCheck" type="CheckBox" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2
text = "Surface Rovers (2)"

[node name="Sep1" type="HSeparator" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2

[node name="SuppliesHeader" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Supply Levels (for 180-day journey):"

[node name="FoodHBox" type="HBoxContainer" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2

[node name="FoodLabel" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/FoodHBox"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Food:"

[node name="FoodSlider" type="HSlider" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/FoodHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 50.0
max_value = 150.0
value = 115.0

[node name="FoodValue" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/FoodHBox"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
text = "115%"

[node name="WaterHBox" type="HBoxContainer" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2

[node name="WaterLabel" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/WaterHBox"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Water:"

[node name="WaterSlider" type="HSlider" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/WaterHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 50.0
max_value = 150.0
value = 115.0

[node name="WaterValue" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/WaterHBox"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
text = "115%"

[node name="OxygenHBox" type="HBoxContainer" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2

[node name="OxygenLabel" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/OxygenHBox"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Oxygen:"

[node name="OxygenSlider" type="HSlider" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/OxygenHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 50.0
max_value = 150.0
value = 115.0

[node name="OxygenValue" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/OxygenHBox"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
text = "115%"

[node name="Sep2" type="HSeparator" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2

[node name="SparePartsHBox" type="HBoxContainer" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2

[node name="SparePartsLabel" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/SparePartsHBox"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)
text = "Spare Parts:"

[node name="SparePartsSpin" type="SpinBox" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/SparePartsHBox"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 3.0

[node name="SparePartsCost" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/SparePartsHBox"]
layout_mode = 2
text = "($3M)"

[node name="MedKitsHBox" type="HBoxContainer" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2

[node name="MedKitsLabel" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/MedKitsHBox"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)
text = "Medical Kits:"

[node name="MedKitsSpin" type="SpinBox" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/MedKitsHBox"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 2.0

[node name="MedKitsCost" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox/MedKitsHBox"]
layout_mode = 2
text = "($2M)"

[node name="Sep3" type="HSeparator" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2

[node name="SupplyCostLabel" type="Label" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "Total Supply Cost: $15M"

[node name="Sep4" type="HSeparator" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
layout_mode = 2

[node name="SurvivalPreview" type="RichTextLabel" parent="HBoxContainer/SidePanel/TabContainer/Cargo/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
bbcode_enabled = true
text = "[b]Journey Preview[/b]
Estimated: 180 days
Margin: +27 days"
fit_content = true

[node name="InfoPanel" type="Panel" parent="HBoxContainer/SidePanel"]
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="HBoxContainer/SidePanel/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/SidePanel/InfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Component Name"

[node name="DescLabel" type="RichTextLabel" parent="HBoxContainer/SidePanel/InfoPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
bbcode_enabled = true
text = "Description"
fit_content = true

[node name="StatsLabel" type="RichTextLabel" parent="HBoxContainer/SidePanel/InfoPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Stats"

[node name="BuildButton" type="Button" parent="HBoxContainer/SidePanel/InfoPanel/VBox"]
layout_mode = 2
text = "Build Component"

[node name="TestButton" type="Button" parent="HBoxContainer/SidePanel/InfoPanel/VBox"]
visible = false
layout_mode = 2
text = "Run Test ($1M, 2 days)"

[node name="LogPanel" type="Panel" parent="HBoxContainer/SidePanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogLabel" type="Label" parent="HBoxContainer/SidePanel/LogPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = 25.0
grow_horizontal = 2
text = "Mission Log"
theme_override_font_sizes/font_size = 14

[node name="LogText" type="RichTextLabel" parent="HBoxContainer/SidePanel/LogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
scroll_following = true

[node name="GridPanel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridLabel" type="Label" parent="HBoxContainer/GridPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 35.0
grow_horizontal = 2
text = "Ship Design Grid"
horizontal_alignment = 1

[node name="GridViewport" type="SubViewportContainer" parent="HBoxContainer/GridPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/GridPanel/GridViewport"]
handle_input_locally = false
size = Vector2i(800, 600)
render_target_update_mode = 4

[node name="HexGrid" type="Node2D" parent="HBoxContainer/GridPanel/GridViewport/SubViewport"]
position = Vector2(400, 300)
script = ExtResource("2_hexgrid")

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="ReadinessLabel" type="Label" parent="BottomBar"]
layout_mode = 2
text = "Ship Readiness:"

[node name="ReadinessBar" type="ProgressBar" parent="BottomBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 100.0
value = 0.0
show_percentage = true

[node name="Spacer" type="Control" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AdvanceDayButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "+1 Day"

[node name="AdvanceWeekButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "+7 Days"

[node name="AutoAdvanceButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
text = "Auto"

[node name="SpeedSlider" type="HSlider" parent="BottomBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 5.0

[node name="SpeedLabel" type="Label" parent="BottomBar"]
layout_mode = 2
text = "5x"

[node name="LaunchButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
disabled = true
text = "LAUNCH"

[node name="LaunchSequence" parent="." instance=ExtResource("3_launch")]
visible = false

[node name="EventPopup" parent="." instance=ExtResource("4_popup")]
visible = false
